--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "echo 'https://ethberlin.ooo' > ./build/CNAME && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
