--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
       # From https://github.com/tschaub/gh-pages#deploying-with-github-actions
       - name: Deploy with gh-pages
         run: |
-          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/Department-of-Decentralization/3.git
+          git remote set-url origin https://${GITHUB_TOKEN}@github.com/Department-of-Decentralization/3.git
           npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
