--- a/package.json
+++ b/package.json
@@ -37,5 +37,10 @@
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
+  },
+  "overrides": {
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-refresh": "0.13.0"
   }
 }
