--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "gatsby-source-filesystem": "^4.18.1",
     "gatsby-transformer-sharp": "^4.18.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-random-reveal": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
