--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gatsby-transformer-sharp": "^4.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-random-reveal": "^2.0.0"
+    "react-random-reveal": "^2.0.0",
+    "react-responsive": "^9.0.0-beta.10"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
