--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@mdx-js/react": "^1.6.22",
     "gatsby": "4.10",
     "gatsby-plugin-image": "^2.18.1",
-    "gatsby-plugin-manifest": "^4.18.1",
+    "gatsby-plugin-manifest": "^4.19.0",
     "gatsby-plugin-mdx": "^3.18.1",
     "gatsby-plugin-sharp": "^4.18.1",
     "gatsby-plugin-sitemap": "^5.18.1",
@@ -28,6 +28,7 @@
     "gatsby-transformer-sharp": "^4.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-random-reveal": "^2.0.0",
     "react-responsive": "^9.0.0-beta.10"
   },
