--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
   },
-  "homepage": "https://24trends.app"
+  "homepage": "https://ethberlin.ooo"
 }
