--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-random-reveal": "^2.0.0",
-    "react-responsive": "^9.0.0-beta.10"
+    "react-responsive": "^9.0.0-beta.10",
+    "react-tooltip": "^4.2.21"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
