--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "react-helmet": "^6.1.0",
     "react-modal": "^3.15.1",
     "react-random-reveal": "^2.0.0",
-    "react-responsive": "^9.0.0-beta.10",
-    "react-tooltip": "^4.2.21"
+    "react-responsive": "^9.0.0-beta.10"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
