--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "gatsby-transformer-sharp": "^4.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-grid-gallery": "^1.0.0",
     "react-helmet": "^6.1.0",
     "react-modal": "^3.15.1",
     "react-random-reveal": "^2.0.0",
-    "react-responsive": "^9.0.0-beta.10"
+    "react-responsive": "^9.0.0-beta.10",
+    "yet-another-react-lightbox": "^2.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
