--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ethberlin",
-  "version": "1.0.0",
+  "version": "4.0.0",
   "private": true,
-  "description": "ETHBerlin³ website",
+  "description": "ETHBerlin04 website",
   "author": "kuzdogan",
   "keywords": [
     "gatsby"
