--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^17.0.2",
     "react-grid-gallery": "^1.0.0",
     "react-helmet": "^6.1.0",
+    "react-image-crop": "^11.0.5",
     "react-modal": "^3.15.1",
     "react-random-reveal": "^2.0.0",
     "react-responsive": "^9.0.0-beta.10",
