--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-modal": "^3.15.1",
     "react-random-reveal": "^2.0.0",
     "react-responsive": "^9.0.0-beta.10",
+    "typewriter-effect": "^2.21.0",
     "yet-another-react-lightbox": "^2.2.2"
   },
   "devDependencies": {
